// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortableListItem should render successfully 1`] = `
<div>
  <article
    class="css-1bc2b9n"
    data-test-id="cf-ui-card"
  >
    <div
      class="css-1cjnmwb"
      data-card-part="wrapper"
    >
      <div
        class="css-161cbg"
        data-card-part="content"
      >
        <div
          class="css-14jukvq"
        >
          <img
            alt="Dress Twin-Set rose"
            data-test-id="image"
            src="https://example.com/commercetools-example/products/picture-1.jpg"
            style="display: block;"
          />
        </div>
        <section
          class="css-1phcpb1"
        >
          <h1
            class="css-19gqs9u"
            data-test-id="cf-ui-heading"
          >
            Dress Twin-Set rose
          </h1>
          <h3
            class="css-1dno5oq"
            data-test-id="cf-ui-subheading"
          >
            M0E20130820E90Z
          </h3>
        </section>
        <div
          class="css-mfolfb"
        >
          <a
            href="https://mc.commercetools.com/example-project/products/28a7442d/general"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="css-rm9mk1"
              color="muted"
              data-test-id="cf-ui-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </a>
          <button
            aria-label="Delete"
            class="css-8mvp1w"
            data-test-id="cf-ui-icon-button"
            type="button"
          >
            <span
              class="css-k008qs"
            >
              <svg
                aria-hidden="true"
                class="css-1jrff5x"
                data-test-id="cf-ui-icon"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`SortableListItem should render successfully the error variation for missing image 1`] = `
<div>
  <article
    class="css-1bc2b9n"
    data-test-id="cf-ui-card"
  >
    <div
      class="css-1cjnmwb"
      data-card-part="wrapper"
    >
      <div
        class="css-161cbg"
        data-card-part="content"
      >
        <div
          class="css-6t06np"
        >
          <svg
            aria-hidden="true"
            class="css-rm9mk1"
            data-test-id="cf-ui-icon"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <g>
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
              <path
                d="M14.14 11.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
              />
            </g>
          </svg>
        </div>
        <section
          class="css-1phcpb1"
        >
          <h1
            class="css-19gqs9u"
            data-test-id="cf-ui-heading"
          >
            Dress Twin-Set rose
          </h1>
          <h3
            class="css-1dno5oq"
            data-test-id="cf-ui-subheading"
          >
            M0E20130820E90Z
          </h3>
        </section>
        <div
          class="css-mfolfb"
        >
          <a
            href="https://mc.commercetools.com/example-project/products/28a7442d/general"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="css-rm9mk1"
              color="muted"
              data-test-id="cf-ui-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </a>
          <button
            aria-label="Delete"
            class="css-8mvp1w"
            data-test-id="cf-ui-icon-button"
            type="button"
          >
            <span
              class="css-k008qs"
            >
              <svg
                aria-hidden="true"
                class="css-1jrff5x"
                data-test-id="cf-ui-icon"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`SortableListItem should render successfully the error variation for missing product 1`] = `
<div>
  <article
    class="css-1bc2b9n"
    data-test-id="cf-ui-card"
  >
    <div
      class="css-1cjnmwb"
      data-card-part="wrapper"
    >
      <div
        class="css-161cbg"
        data-card-part="content"
      >
        <div
          class="css-6t06np"
        >
          <svg
            aria-hidden="true"
            class="css-rm9mk1"
            data-test-id="cf-ui-icon"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
            />
          </svg>
        </div>
        <section
          class="css-1phcpb1"
        >
          <h1
            class="css-1wlxn5b"
            data-test-id="cf-ui-heading"
          >
            M0E20130820E90Z
          </h1>
          <div
            class="css-13doom3"
            data-test-id="cf-ui-badge"
          >
            Product
             missing
          </div>
        </section>
        <div
          class="css-mfolfb"
        >
          <a
            href="https://mc.commercetools.com/example-project/products/28a7442d/general"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="css-rm9mk1"
              color="muted"
              data-test-id="cf-ui-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </a>
          <button
            aria-label="Delete"
            class="css-8mvp1w"
            data-test-id="cf-ui-icon-button"
            type="button"
          >
            <span
              class="css-k008qs"
            >
              <svg
                aria-hidden="true"
                class="css-1jrff5x"
                data-test-id="cf-ui-icon"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`SortableListItem should render successfully the loading variation 1`] = `
<div>
  <article
    class="css-1bc2b9n"
    data-test-id="cf-ui-card"
  >
    <div
      class="css-1cjnmwb"
      data-card-part="wrapper"
    >
      <div
        class="css-161cbg"
        data-card-part="content"
      >
        <svg
          aria-label="Loading component..."
          class="css-1xwljqd"
          data-test-id="cf-ui-skeleton-form"
          height="100%"
          role="img"
          width="100%"
        >
          <title>
            Loading component...
          </title>
          <rect
            clip-path="url(#cf-ui-skeleton-clip_5799)"
            height="100%"
            style="fill: url(#cf-ui-skeleton-clip-gradient_7559);"
            width="100%"
            x="0"
            y="0"
          />
          <defs>
            <clippath
              id="cf-ui-skeleton-clip_5799"
            >
              <rect
                data-test-id="cf-ui-skeleton-image"
                height="48"
                rx="0"
                ry="0"
                width="48"
              />
            </clippath>
            <lineargradient
              id="cf-ui-skeleton-clip-gradient_7559"
            >
              <stop
                offset="0%"
                stop-color="#e5ebed"
                stop-opacity="1"
              >
                <animate
                  attributeName="stop-color"
                  dur="2s"
                  id="animation_6859"
                  repeatCount="indefinite"
                  values="#e5ebed; #f7f9fa; #e5ebed"
                />
              </stop>
              <stop
                offset="50%"
                stop-color="#f7f9fa"
                stop-opacity="1"
              >
                <animate
                  attributeName="stop-color"
                  begin="animation_6859.begin+0.25s"
                  dur="2s"
                  repeatCount="indefinite"
                  values="#e5ebed; #f7f9fa; #e5ebed"
                />
              </stop>
              <stop
                offset="100%"
                stop-color="#e5ebed"
                stop-opacity="1"
              >
                <animate
                  attributeName="stop-color"
                  begin="animation_6859.begin+0.5s"
                  dur="2s"
                  repeatCount="indefinite"
                  values="#e5ebed; #f7f9fa; #e5ebed"
                />
              </stop>
            </lineargradient>
          </defs>
        </svg>
        <div
          class="css-kx63wx"
        >
          <img
            alt="Dress Twin-Set rose"
            data-test-id="image"
            src="https://example.com/commercetools-example/products/picture-1.jpg"
            style="display: none;"
          />
        </div>
        <section
          class="css-1phcpb1"
        >
          <h1
            class="css-19gqs9u"
            data-test-id="cf-ui-heading"
          >
            Dress Twin-Set rose
          </h1>
          <h3
            class="css-1dno5oq"
            data-test-id="cf-ui-subheading"
          >
            M0E20130820E90Z
          </h3>
        </section>
        <div
          class="css-mfolfb"
        >
          <a
            href="https://mc.commercetools.com/example-project/products/28a7442d/general"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="css-rm9mk1"
              color="muted"
              data-test-id="cf-ui-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </a>
          <button
            aria-label="Delete"
            class="css-8mvp1w"
            data-test-id="cf-ui-icon-button"
            type="button"
          >
            <span
              class="css-k008qs"
            >
              <svg
                aria-hidden="true"
                class="css-1jrff5x"
                data-test-id="cf-ui-icon"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`SortableListItem should render successfully the sortable variation 1`] = `
<div>
  <article
    class="css-1bc2b9n"
    data-test-id="cf-ui-card"
  >
    <div
      class="css-1cjnmwb"
      data-card-part="wrapper"
    >
      <div
        class="css-161cbg"
        data-card-part="content"
      >
        <div
          class="css-14jukvq"
        >
          <img
            alt="Dress Twin-Set rose"
            data-test-id="image"
            src="https://example.com/commercetools-example/products/picture-1.jpg"
            style="display: block;"
          />
        </div>
        <section
          class="css-1phcpb1"
        >
          <h1
            class="css-19gqs9u"
            data-test-id="cf-ui-heading"
          >
            Dress Twin-Set rose
          </h1>
          <h3
            class="css-1dno5oq"
            data-test-id="cf-ui-subheading"
          >
            M0E20130820E90Z
          </h3>
        </section>
        <div
          class="css-mfolfb"
        >
          <a
            href="https://mc.commercetools.com/example-project/products/28a7442d/general"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="css-rm9mk1"
              color="muted"
              data-test-id="cf-ui-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </a>
          <button
            aria-label="Delete"
            class="css-8mvp1w"
            data-test-id="cf-ui-icon-button"
            type="button"
          >
            <span
              class="css-k008qs"
            >
              <svg
                aria-hidden="true"
                class="css-1jrff5x"
                data-test-id="cf-ui-icon"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </article>
</div>
`;
